######## jobberBase changelog ########

version 1.4:
	* Fixed: proper url encoding done in JavaScript for search requests
	* Fixed: search escaping
	* Added: simple page editing for static pages
	* Added: categories management
	* Enhanced: backend javascript
	* Added/Changed: translations based on an ini file

version 1.3 (30/01/2008):
    * Fixed more search-related bugs (thanks to Mitchell Lane <mdlane@alumni.clemson.edu>)

version 1.3 (30/01/2008):
    * Added an admin panel (thanks to Lavinia Creivean <links_clm@yahoo.com>)
    * Added a survey page: the ideal job (as seen on www.jobber.ro/jobul-ideal/)
    * Improved pagination support (thanks to Mihai Mocanu)
    * Fixed some bugs related to search
    * Translated the sitemap page (forgot to do it, before :p)

version 1.2 (12/11/2007):
    * Added pagination support, active by default (thanks to Adrian Rusu-Scurtu!)

version 1.1 (11/28/2007):
    * Modified the directory structure and moved the entire application into /app subdirectory.
    * Added an alternate .htaccess that seems to work better on some big hosting companies.
    * Cleaned up config.php of unnecessarry defines.
    * Fixed a number of bugs reported on www.jobberbase.com/community/ (thanks to everyone!)

version 1.0 (10/20/2007):
    * Translated www.jobber.ro into English.
    * Fixed some bugs.
    * Sent first copies to a couple of friends for testing. 