@@ -40,6 +40,7 @@
 			<ul>
 				<li {if $current_category == 'pages'}class="selected"{/if}><a href="{$BASE_URL_ADMIN}pages">Pages</a></li>
 				<li {if $current_category == 'categories'}class="selected"{/if}><a href="{$BASE_URL_ADMIN}categories">Categories</a></li>
+				<li {if $current_category == 'password'}class="selected"{/if}><a href="{$BASE_URL_ADMIN}password">Change your password</a></li>
 				<li><a href="{$BASE_URL_ADMIN}logout/">Logout &raquo;</a></li>
 			</ul>
 			{/if}
